--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
-streamlit>=1.32.0
+# Streamlit
+streamlit>=1.28.0
+
+# Data Processing
 pandas>=2.0.0
 numpy>=1.24.0
-plotly>=5.18.0
-yfinance>=0.2.36
-fredapi>=0.5.1
+
+# Data Sources
 requests>=2.31.0
-scipy>=1.11.0
-scikit-learn>=1.3.0
-matplotlib>=3.8.0
+yfinance>=0.2.28
+
+# Visualization
+plotly>=5.17.0
+matplotlib>=3.7.0
 Pillow>=10.0.0
-openpyxl>=3.1.0
+
+# Machine Learning (for FX Views)
+scikit-learn>=1.3.0
+lightgbm>=4.0.0
+
+# Utilities
+python-dateutil>=2.8.2
